<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingTop="10dp"
    android:paddingRight="15dp"
    android:paddingBottom="10dp"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_below="@+id/btn_hello"
        android:layout_marginTop="9dp"
        android:onClick="doQuo"
        android:text="@string/button_main_quo"
        android:textSize="24sp"
        app:backgroundTint="#03A9F4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_hello"
            android:layout_width="180dp"
            android:layout_height="200dp"
            android:layout_below="@+id/btn_login"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="9dp"
            android:onClick="doStart"
            android:text="@string/button_main_hello"
            android:textSize="24sp"
            app:backgroundTint="#8BC34A"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3"
            tools:ignore="NotSibling" />

        <Button
            android:id="@+id/btn_music"
            android:layout_width="180dp"
            android:layout_height="200dp"
            android:layout_below="@+id/btn_login"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_toEndOf="@+id/btn_hello"
            android:layout_toRightOf="@+id/btn_hello"
            android:onClick="doMusic"
            android:text="@string/button_main_music"
            android:textSize="24sp"
            app:backgroundTint="#FFC107"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3"
            tools:ignore="NotSibling" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="382dp"
            android:layout_height="180dp"
            android:onClick="doLogin"
            android:text="@string/button_main_login"
            android:textSize="24sp"
            app:backgroundTint="#673AB7"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.517"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_music"
            app:layout_constraintVertical_bias="0.0" />
    </LinearLayout>

</LinearLayout>